--- a/jsbasic/mungunshagai/todo/style.css
+++ b/jsbasic/mungunshagai/todo/style.css
@@ -16,6 +16,10 @@
     max-width: 400px;
     width: 100%;
     margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    gap: 20px;
 }
 
 header {
@@ -24,33 +28,99 @@ header {
 
 h1 {
     font-size: 28px;
+    margin: 20px 0;
 }
 h2 {
     font-size: 24px;
     text-align: center;
 }
+
+input, button {
+    border: none;
+    appearance: none;
+    outline: none;
+}
+
 #new-task-input {
-    /* line-height: 3; */
     width: 100%;
     background-color: rgb(251, 244, 244);
-    border: none;
     border-bottom: 2px solid rgb(227, 149, 74);
     margin: 0;
     padding: 5px 10px;
     overflow-x: hidden;
+    font-size: 1.2rem;
     color: rgb(29, 41, 83);
 }
+
+#new-task-input::placeholder {
+    color: #6B7280;
+}
+
 #new-task-submit {
     background-color: rgb(227, 149, 74);
-    border: none;
     height: 43px;
     color: #fff;
     padding: 6px;
+    font-size: 1rem;
+    font-weight: 500;
 }
+#new-task-submit:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 #new-task-form {
     display: flex;
     width: 100%;
 }
 #tasks { 
     border-top: 2px solid rgb(29, 41, 83);
+}
+
+.task-list {
+    padding: 1rem;
+}
+
+#tasks .task {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    border-radius: 5px;
+    margin: 8px 0;
+    background-color: rgb(245, 245, 229);
+    border: 1px solid rgb(227, 149, 74);
+}
+
+.task .content .text {
+    font-size: 1.1rem;
+    width: 100%;
+    display: block;
+    transition: 0.4s;
+    background: transparent;
+}
+.task .content .text:not(:read-only) {
+    color: #EC4899;
+}
+.task .content .text:not(.checkedTask) {
+    color: #6B7280;
+    text-decoration: line-through;
+}
+.task .content {
+    flex: 1 1 0%;
+}
+
+.task .actions {
+    display: flex;
+    margin: 0;
+}
+
+.task .actions button {
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 1rem;
+    transition: 0.4s;
+}
+
+.task .actions button:hover {
+    opacity: 0.8;
 }
