--- a/jsbasic/newyear/qrLogin/style.css
+++ b/jsbasic/newyear/qrLogin/style.css
@@ -1,8 +1,5 @@
 .gradient-custom-2 {
-  /* fallback for old browsers */
   background: #fccb90;
-
-  /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-linear-gradient(
     to right,
     #ee7724,
@@ -10,8 +7,7 @@
     #dd3675,
     #b44593
   );
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
   background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 }
 
@@ -28,4 +24,8 @@
 }
 .hide {
     display: none;
+}
+
+body {
+  background-image: url(./img/209037.gif);
 }
