--- a/jsbasic/bilguun/randomUser/style.css
+++ b/jsbasic/bilguun/randomUser/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');
+:root {
+    --car-header: 240px;
+}
 
 * {
     padding: 0;
@@ -38,23 +41,25 @@ body {
     background-color: rgb(125, 151, 248);
     color: #fff;
     text-align: center;
-    border: red solid 1px;
 }
 .card-header #name {
-    margin: 26px 0px 16px;
+    margin: 50px 0px 16px;
     font-size: 1.5rem;
     font-weight: 300;
 }
 
 .card-image {
     position: absolute;
-    offset-position: center;
-    transform: translateX();
-    transform: translateY(-100%);
-    width: 100px;
-    height: 100px;
+    top: 0;
+    left: 33%;
+    transform: translate(0%, -50%);
+    width: 130px;
+    height: 130px;
     border: 5px solid #fff;
-    border-radius: 60px;
+    border-radius: 70px;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
 }
 .card-body {
     padding: 1.5rem 3rem;
